--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,9 +21,9 @@ layout: default
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      <!-- <section id="main_content" class="inner">
         {{ content }}
-      </section>
+      </section>-->
     
 
       <div>
