--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,10 +5,10 @@ layout: default
 <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>-->
 
           {% if site.show_downloads %}
             <section id="downloads">
@@ -21,14 +21,14 @@ layout: default
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <!-- <section id="main_content" class="inner">
+      <section id="main_content" class="inner">
         {{ content }}
-      </section>-->
+      </section>
     
 
       <div>
 
-      <h2>Latest Posts Yes</h2>
+      <h2>Latest Posts</h2>
 
        <div>&nbsp;</div>
 
