--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <!--<div id="header_wrap" class="outer">
         <header class="inner">
-          <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>-->
+          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
           {% if site.show_downloads %}
             <section id="downloads">
@@ -17,7 +17,7 @@ layout: default
             </section>
           {% endif %}
         </header>
-    </div>
+    </div>-->
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
