--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,13 +20,15 @@ layout: default
     </div>-->
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <!--<div id="main_content_wrap" class="outer">-->
+    <div id="main_content_wrap">
+      <!--<section id="main_content" class="inner">
         {{ content }}
-      </section>
-    
+      </section>-->
+        
 
       <div>
+      {{ content }}
 
       <h2>Latest Posts</h2>
 
