--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <!--<div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
@@ -17,18 +17,16 @@ layout: default
             </section>
           {% endif %}
         </header>
-    </div>
+    </div>-->
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
- 
       <section id="main_content" class="inner">
         {{ content }}
-        </section>
-        
+      </section>
+    
 
       <div>
-     
 
       <h2>Latest Posts</h2>
 
