--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,7 @@ layout: default
       <section id="main_content" class="inner">
         {{ content }}
       </section>
+    </div>
     
 
       <div>
