--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
     </div>
     
 
-      <div>
+      <!--<div>
 
       <h2>Latest Posts yes</h2>
 
@@ -50,5 +50,5 @@ layout: default
           {% endfor %}
         </ul>
 
-    </div>
+    </div>-->
 
