--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,11 @@ layout: default
         {{ content }}
       </section>
     </div>
+
+    <!-- POSTS -->
+    <div>
+        <h2>Latest Posts yes</h2>
+    </div>
     
 
       <!--<div>
