--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,12 +23,27 @@ layout: default
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
-      </section>
-    </div>
+          
+          <h2>Latest Posts yes</h2>
+          <div>&nbsp;</div>
 
-    <!-- POSTS -->
-    <div>
-        <h2>Latest Posts yes</h2>
+        <ul class="post-list">
+          {% for post in site.posts %}
+           <li>
+
+             {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
+             <span class="post-meta">{{ post.date | date: date_format }}</span>
+
+              <h2>
+                <a class="post-link" href="{{ post.url | relative_url }}" title="{{ post.title }}">{{ post.title | escape }}</a>
+              </h2>
+
+              <span>{{ post.excerpt | markdownify | truncatewords: 30 }}</span>
+
+            </li>
+          {% endfor %}
+        </ul>
+      </section>
     </div>
     
 
