--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 #header_wrap {
-  background: url("assets/images/ps-header.gif") repeat-x;
+  background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
 }
