--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,6 @@
 
 @import "{{ site.theme }}";
 
-#header_wrap {
+/*#header_wrap {
   background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
-}
+}*/
