--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,8 @@
 /*#header_wrap {
   background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
 }*/
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Helvetica, 'Lucida Grande', 'Calibri', Arial, sans-serif;
+    letter-spacing: 0;
+}
