--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
       <section id="main_content" class="inner">
         {{ content }}
           
-          <h2>Latest Posts yes</h2>
+          <h3>Latest Posts</h3>
           <div>&nbsp;</div>
 
         <ul class="post-list">
