--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,11 @@ a {
 }
 
 /* HEADER OVERRIDES */
+
+#forkme_banner {
+    background: url(../images/blacktocat.png) #444 no-repeat 95% 50%;
+}
+
 /*#header_wrap {
   background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
 }*/
