--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <!-- HEADER -->
+<div>
+    <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+    <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>
+</div>
+
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
