--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- HEADER -->
-<div>
+<div id="top_header">
     <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
     <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>
 </div>
