--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,16 @@ layout: default
 
 <!-- HEADER -->
 <div id="top_header">
-    <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-    <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>
+    <h1>{{ site.title | default: site.github.repository_name }}</h1>
+    <p>{{ site.description | default: site.github.project_tagline }}</p>
 </div>
 
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>
+          <!--<h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+          <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>-->
 
           {% if site.show_downloads %}
             <section id="downloads">
