--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,11 @@ a {
 
 /* HEADER OVERRIDES */
 
+#top_header {
+    background-color: #fff;
+    padding: 5px 10px;
+}
+
 #forkme_banner {
     background: url(../images/blacktocat.png) #444 no-repeat 95% 50%;
 }
