--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@ a {
     background: url(../images/blacktocat.png) #444 no-repeat 95% 50%;
 }
 
-/*#header_wrap {
-  background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
-}*/
+#header_wrap {
+    height: 200px;
+    background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
+}
