--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: default
 
 <!-- HEADER -->
 <div id="top_header">
+    <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient logo" width="50" height="50">
     <h1>{{ site.title | default: site.github.repository_name }}</h1>
     <p>{{ site.description | default: site.github.project_tagline }}</p>
 </div>
