--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,17 @@ layout: default
 ---
 
     <!-- HEADER -->
+<div id="top_header">
+    <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient logo" width="50" height="50">
+    <h1>{{ site.title | default: site.github.repository_name }}</h1>
+    <p>{{ site.description | default: site.github.project_tagline }}</p>
+</div>
+
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
-          <h1 id="project_title">{{ post.title | default: site.github.repository_name }}</h1>
+          <!--<h1 id="project_title">{{ post.title | default: site.github.repository_name }}</h1>-->
 
         </header>
     </div>
