--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ a {
 /* HEADER OVERRIDES */
 
 #top_header {
-    background-color: #fff;
+    background-color: #f4f0ec;
     padding: 5px 10px;
 }
 
