--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    color: #c15d66;
+    color: #B94650;
+    text-decoration: underline;
 }
 
 /* HEADER OVERRIDES */
