--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 /* GLOBAL OVERRIDES*/
 h1, h2, h3, h4, h5, h6 {
-    font-family: Helvetica, 'Lucida Grande', 'Calibri', Arial, sans-serif;
+    font-family: Georgia, Helvetica, 'Lucida Grande', 'Calibri', Arial, sans-serif;
     letter-spacing: 0;
     line-height: 1.1;
 }
