--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@ layout: default
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+          <h1>{{ post.title }}</h1>
         {{ content }}
       </section>
     </div>
