--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub hi</a>
 
           <!--<h1 id="project_title">{{ post.title | default: site.github.repository_name }}</h1>-->
 
