--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub hi</a>
+          <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
 
           <!--<h1 id="project_title">{{ post.title | default: site.github.repository_name }}</h1>-->
 
@@ -21,7 +21,7 @@ layout: default
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-          <h1>{{ post.title }}</h1>
+          <h1 id="project_title">{{ post.title | default: site.github.repository_name }}</h1>
         {{ content }}
       </section>
     </div>
