--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 /* GLOBAL OVERRIDES*/
 h1, h2, h3, h4, h5, h6 {
-    font-family: Georgia, Helvetica, 'Lucida Grande', 'Calibri', Arial, sans-serif;
+    font-family: Georgia, Times, Palatino, serif;
     letter-spacing: 0;
     line-height: 1.1;
     color: #333;
@@ -13,6 +13,21 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 32px;
+}
+h2 {
+    font-size: 28px;
+}
+h3 {
+    font-size: 24px;
+}
+h4 {
+    font-size: 20px;
+}
+h5 {
+    font-size: 18px;
+}
+h6 {
+    font-size: 16px;
 }
 
 a {
