--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,10 +42,9 @@ blockquote {
     padding: 20px;
     border-left: 3px solid #bbb;
     background-color: #444;
-    /*font-family: helvetica, sans-serif;
+    font-family: helvetica, sans-serif;
     font-size: 28px;
-    font-weight: 600;*/
-    font: 600 normal 28px, Helvetica;
+    font-weight: 600;
 }
 
 /* HEADER OVERRIDES */
