--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 <!-- HEADER -->
 <div id="top_header">
     <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient logo" width="50" height="50">
-    <h1>{{ site.title | default: site.github.repository_name }}</h1>
-    <p>{{ site.description | default: site.github.project_tagline }}</p>
+    <p class="site_name">{{ site.title | default: site.github.repository_name }}</p>
+    <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
 
     <div id="header_wrap" class="outer">
