--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,6 +79,16 @@ blockquote {
     background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
 }
 
+#banner_wrap_home {
+    height: 260px;
+    background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
+}
+
+#banner_wrap_post {
+    height: 89px;
+    background: url("/accessible-ecommerce/assets/images/ps-header-thin.gif") repeat-x;
+}
+
 #main_content_wrap {
     background: #f4f0ec;
 }
