--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: default
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
 
-    <div id="header_wrap" class="outer">
+    <div id="banner_wrap_home" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
 
           <!--<h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <p id="project_tagline">{{ site.description | default: site.github.project_tagline }}</p>-->
