--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
 
-    <div id="header_wrap" class="outer">
+    <div id="banner_wrap_post" class="outer">
         <header class="inner">
           <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
 
