--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,11 @@ blockquote {
     box-shadow: none;
 }
 
+#top_header a {
+    color: #333;
+    text-decoration: none;
+}
+
 .site_name {    
     font-family: Georgia, Times, Palatino, serif;
     Font-size: 22px;
