--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
     <!-- HEADER -->
 <div id="top_header">
-    <a href="{{ site.url }}">
+    <a href="/accessible-ecommerce/">
     <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient logo" width="50" height="50">
         <p class="site_name">{{ site.title | default: site.github.repository_name }}</p></a>
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
