--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,8 @@ layout: default
       </section>
     </div>
 
-   
+    {% if page.comments == true %}
+    {% include disqus.html %}
+    {% endif %}
 
     
