--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 /* GLOBAL OVERRIDES*/
 h1, h2, h3, h4, h5, h6 {
-    font-family: Georgia, Times, Palatino, serif;
+    font-family: Garamond, Georgia, Times, Palatino, serif;
     letter-spacing: 0;
     line-height: 1.1;
     color: #333;
