--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,7 +71,7 @@ li {
 }
 
 .site_name {    
-    font-family: Garamond, Georgia, Times, Palatino, serif;
+    font-family: Georgia, Times, Palatino, serif;
     Font-size: 22px;
     font-weight: 600;
     width: 500px;
