--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@ layout: default
 
 <!-- HEADER -->
 <div id="top_header">P.S
-    <!--<a href="{{ site.url }}">
+    <a href="{{ site.url }}">
     <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient" width="50" height="50">
-        <p class="site_name">{{ site.title | default: site.github.repository_name }}</p></a>-->
+        <!--<p class="site_name">{{ site.title | default: site.github.repository_name }}</p>--></a>
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
 
