--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,8 @@ layout: default
 <!-- HEADER -->
 <div id="top_header" style="height:60px">
     <a href="{{ site.url }}">
-    <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient" width="50" height="50">
+    <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient" width="50" height="50" style="float: left;
+    padding-right: 15px; border: 0; box-shadow: none; padding: 0; top: -4px;">
         <!--<p class="site_name">{{ site.title | default: site.github.repository_name }}</p>--></a>
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
