--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,6 +56,7 @@ li {
 #top_header {
     background-color: #f4f0ec;
     padding: 5px 10px;
+    height: 60px;
 }
 
 #top_header img {
@@ -63,6 +64,9 @@ li {
     padding-right:15px;
     border: 0;
     box-shadow: none;
+    float: left;
+    padding: 0; 
+    top: -4px;
 }
 
 #top_header a {
