--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <div id="top_header" style="height:60px">
     <a href="{{ site.url }}">
     <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient" width="50" height="50" />
-        <!--<p class="site_name">{{ site.title | default: site.github.repository_name }}</p>--></a>
+        <p class="site_name">{{ site.title | default: site.github.repository_name }}</p></a>
     <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
 </div>
 
