--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,7 +78,7 @@ li {
     font-family: Georgia, Times, Palatino, serif;
     Font-size: 22px;
     font-weight: 600;
-    width: 500px;
+    max-width: 500px;
     line-height: 1.1;
     padding: 10px 0;
 }
