--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,11 +61,10 @@ li {
 
 #top_header img {
     float: left;
-    padding-right:15px;
     border: 0;
     box-shadow: none;
     float: left;
-    padding: 0; 
+    padding: 0 15px 0 0; 
     top: -4px;
 }
 
