--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- HEADER -->
-<div id="top_header" style="height:60px">
+<div id="top_header">
     <a href="{{ site.url }}">
     <img src="/accessible-ecommerce/assets/images/ps-logo.gif" alt="Publicis.Sapient" width="50" height="50" />
         <p class="site_name">{{ site.title | default: site.github.repository_name }}</p></a>
