--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,6 +56,7 @@ li {
 #top_header {
     background-color: #f4f0ec;
     padding: 5px 10px;
+    min-height: 60px;
 }
 
 #top_header img {
@@ -77,7 +78,7 @@ li {
     Font-size: 22px;
     font-weight: 600;
     line-height: 1.1;
-    padding: 10px 0;
+    padding: 10px 0 5px 0;
 }
 
 #forkme_banner {
