--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,7 +78,7 @@ li {
     Font-size: 22px;
     font-weight: 600;
     line-height: 1.1;
-    padding: 10px 0 5px 0;
+    padding: 0 0 5px 0;
 }
 
 #forkme_banner {
