--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,23 +12,27 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 10px;
 }
 
+body {
+    font-size: 1 rem;
+}
+
 h1 {
-    font-size: 32px;
+    font-size: 2 rem;
 }
 h2 {
-    font-size: 28px;
+    font-size: 1.75 rem;
 }
 h3 {
-    font-size: 24px;
+    font-size: 1.5 rem;
 }
 h4 {
-    font-size: 20px;
+    font-size: 1.25 rem;
 }
 h5 {
-    font-size: 18px;
+    font-size: 1.1 rem;
 }
 h6 {
-    font-size: 16px;
+    font-size: 1 rem;
 }
 
 a {
@@ -43,7 +47,7 @@ blockquote {
     border-left: 3px solid #bbb;
     background-color: #444;
     font-family: helvetica, sans-serif;
-    font-size: 28px;
+    font-size: 1.75 rem;
     font-weight: 600;
 }
 
