--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,22 +17,24 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
-}
-h2 {
     font-size: 1.75rem;
 }
-h3 {
+h2 {
     font-size: 1.5rem;
 }
-h4 {
+h3 {
     font-size: 1.25rem;
 }
-h5 {
+h4 {
     font-size: 1.1rem;
+}
+h5 {
+    font-size: 1rem;
+    font-weight: bold;
 }
 h6 {
     font-size: 1rem;
+    font-weight: bold;
 }
 
 a {
@@ -79,7 +81,7 @@ li {
 
 .site_name {    
     font-family: Georgia, Times, Palatino, serif;
-    Font-size: 22px;
+    Font-size: 1.75rem;
     font-weight: 600;
     line-height: 1.1;
     padding: 0 0 5px 0;
