--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -94,6 +94,7 @@ li {
 #header_wrap, #banner_wrap_home {
     height: 260px;
     background: url("/accessible-ecommerce/assets/images/ps-header2.gif") repeat-x;
+    background-position: center;
 }
 
 #banner_wrap_post {
